# LunaSolGameEngine

./: .gitignore  CMakeLists.txt  GameTestlog.txt  LunaSolGameEngine.sln  README.md  todo.md  vcpkg.json
LunaSolGameEngine/: CMakeLists.txt  CMakePresets.json  LunaSolGameEngine.vcxproj  LunaSolGameEngine.vcxproj.filters  vcpkg.json
LunaSolGameEngine/inc/: CMakeLists.txt  LSBuffer.h  LSEFramework.h  LSTimer.h  LSTypeDefs.h
LunaSolGameEngine/inc/data/: BufferTypes.ixx  Concepts.ixx  DataTypes.ixx  LSEDataLib.ixx  MathTypes.ixx  Resource.ixx
LunaSolGameEngine/inc/data/serialize/: AssimpLoader.ixx  WavefrontObj.ixx
LunaSolGameEngine/inc/engine/: CMakeLists.txt  EngineApp.ixx  EngineCamera.ixx  EngineCodes.ixx  EngineDefines.h  EngineDefines.ixx  EngineDevice.ixx  EngineLogDefines.h  EngineLogger.ixx  EngineWindow.ixx  LSEngine.ixx
LunaSolGameEngine/inc/helper/: IOHelper.ixx
LunaSolGameEngine/inc/math/: GeometryMath.ixx  MathLib.ixx  MatrixMath.ixx
LunaSolGameEngine/inc/mesh/: GeometryGenerator.ixx
LunaSolGameEngine/inc/platform/Windows/: Win32Window.ixx
LunaSolGameEngine/inc/platform/Windows/D3D11/: DeviceD3D11.ixx  LSConverters.h  PipelineFactoryD3D11.ixx  RenderD3D11.ixx  RenderFuncs.ixx
LunaSolGameEngine/inc/platform/Windows/D3D12/: DeviceD3D12.ixx
LunaSolGameEngine/inc/platform/Windows/DXGI/: DXGIHelper.ixx
LunaSolGameEngine/inc/platform/Windows/DirectX/: DXCamera.ixx  DXCameraController.ixx  DXMatrixUtils.ixx  DirectXCommon.ixx  ResourceManagerD3D12.ixx
LunaSolGameEngine/inc/platform/Windows/Win32/: Win32Window.ixx  WinApiUtils.h
LunaSolGameEngine/inc/utils/: StdUtils.ixx  Util.ixx
LunaSolGameEngine/mod/: CMakeLists.txt
LunaSolGameEngine/mod/data/: BufferTypes.ixx  CMakeLists.txt  DataTypes.ixx  LSDataLib.ixx
LunaSolGameEngine/mod/data/serialize/: CMakeLists.txt
LunaSolGameEngine/mod/engine/: CMakeLists.txt  EngineApp.ixx  LSEngine.ixx
LunaSolGameEngine/mod/helper/: CMakeLists.txt  IOHelper.ixx  LSCommonTypes.ixx
LunaSolGameEngine/mod/math/: CMakeLists.txt
LunaSolGameEngine/mod/mesh/: CMakeLists.txt
LunaSolGameEngine/mod/platform/: CMakeLists.txt
LunaSolGameEngine/mod/platform/Windows/: CMakeLists.txt
LunaSolGameEngine/mod/platform/Windows/D3D11/: CMakeLists.txt  D3D11Lib.ixx  DeviceD3D11.ixx  RenderD3D11.ixx  RenderFuncs.ixx
LunaSolGameEngine/mod/platform/Windows/D3D12/: CMakeLists.txt  CommandListDx12.ixx  CommandQueueDx12.ixx  D3D12Common.ixx  D3D12Lib.ixx  DescriptorHeapDx12.ixx  DeviceD3D12.ixx  FrameBufferDxgi.ixx  FrameDx12.ixx  RendererDX12.ixx
LunaSolGameEngine/mod/platform/Windows/DXGI/: CMakeLists.txt
LunaSolGameEngine/mod/platform/Windows/DirectX/: CMakeLists.txt  D3DCompiler.ixx  DXCamera.ixx  DXCameraController.ixx  DirectXCommon.ixx
LunaSolGameEngine/mod/platform/Windows/Win32/: CMakeLists.txt  ComUtils.ixx  Win32App.ixx  Win32Utils.ixx  Win32Window.ixx
LunaSolGameEngine/mod/utils/: CMakeLists.txt
LunaSolGameEngine/modules/data/: BufferTypes.ixx  DataLib.ixx  DataTypes.ixx  Input.ixx  LSBufferTypes.ixx  LSCommonTypes.ixx  LSConcepts.ixx  LSData.ixx  LSDataTypes.ixx  LSMathTypes.ixx  LSResource.ixx  LSShader.ixx  LSTextureDesc.ixx  LSTextureTypes.ixx  LSWindowTypes.ixx  MathTypes.ixx  Resource.ixx  Shader.ixx  TextureTypes.ixx
LunaSolGameEngine/modules/data/khronos_standards/: gltfParser.ixx
LunaSolGameEngine/modules/data/serialize/: AssimpLoader.ixx  WavefrontObj.ixx
LunaSolGameEngine/modules/engine/: Clock.ixx  EngineApp.ixx  EngineCodes.ixx  EngineCommon.ixx  EngineDevice.ixx  EngineLogger.ixx  EngineWindow.ixx  GeometryMath.ixx  LSApp.ixx  LSBuffer.ixx  LSCamera.ixx  LSDefinitions.ixx  LSDevice.ixx  LSScene.ixx  LSTimer.ixx  LSWindow.ixx  MatrixMath.ixx
LunaSolGameEngine/modules/geometry/: GeometryGenerator.ixx
LunaSolGameEngine/modules/helper/: IOHelper.ixx  LSCommonTypes.ixx  PipelineFactory.ixx
LunaSolGameEngine/modules/math/: GeometryMath.ixx  MatrixMath.ixx
LunaSolGameEngine/modules/mesh/: GeometryGenerator.ixx
LunaSolGameEngine/modules/platform/D3D11/: D3D11HelperStates.ixx  D3D11MemoryHelper.ixx  D3DUtils.ixx  DeviceD3D11.ixx  RenderD3D11.ixx
LunaSolGameEngine/modules/platform/D3D11/Helpers/: D3DUtils.ixx
LunaSolGameEngine/modules/platform/D3D12/: DeviceD3D12.ixx  RenderD3D12.ixx
LunaSolGameEngine/modules/platform/Windows/: FrameBufferDxgi.ixx  Win32Lib.ixx  Win32Window.ixx
LunaSolGameEngine/modules/platform/Windows/D3D11/: D3D11Lib.ixx  DeviceD3D11.ixx  PipelineFactoryD3D11.ixx  RenderD3D11.ixx  RenderFuncs.ixx
LunaSolGameEngine/modules/platform/Windows/D3D12/: CommandListDx12.ixx  CommandQueueD3D12.ixx  CommandQueueDx12.ixx  D3D12Common.ixx  D3D12Helper.ixx  D3D12Lib.ixx  DescriptorHeapDx12.ixx  DeviceD3D12.ixx  FrameDx12.ixx  ResourceManagerD3D12.ixx
LunaSolGameEngine/modules/platform/Windows/DXGI/: DXGIHelper.ixx
LunaSolGameEngine/modules/platform/Windows/DirectX/: DXCamera.ixx  DXCameraController.ixx  DXMathLib.ixx  DXMatrixUtils.ixx  (+3 more)
LunaSolGameEngine/modules/utils/: HLSLUtils.ixx  MSUtils.ixx  StdUtils.ixx  Util.ixx
LunaSolGameEngine/src/: LSEFramework.cpp
LunaSolGameEngine/src/data/: BufferTypes.ixx  DataTypes.ixx  MathTypes.ixx  TextureTypes.ixx
LunaSolGameEngine/src/data/serialize/: AssimpLoader.ixx  WavefrontObj.ixx
LunaSolGameEngine/src/engine/: Clock.ixx  EngineApp.cpp  EngineApp.ixx  EngineCodes.ixx  EngineCommon.cpp  EngineDefines.ixx  EngineDevice.ixx  EngineInput.ixx  EngineLogger.ixx  EngineShader.ixx  EngineWindow.ixx  LSEngine.ixx  Renderer.ixx
LunaSolGameEngine/src/helper/: IOHelper.ixx  LSCommonTypes.ixx  PipelineFactory.cpp  PipelineFactory.ixx
LunaSolGameEngine/src/math/: GeometryMath.ixx
LunaSolGameEngine/src/mesh/: GeometryGenerator.ixx
LunaSolGameEngine/src/platform/D3D11/: DeviceD3D11.cpp  PipelineFactoryD3D11.cpp  RenderD3D11.cpp  RenderFuncsD3D11.cpp
LunaSolGameEngine/src/platform/D3D12/: CommandListDx12.cpp  CommandQueueD3D12.cpp  CommandQueueDx12.cpp  DeviceD3D12.cpp  ResourceManagerD3D12.cpp
LunaSolGameEngine/src/platform/Windows/: Win32Windows.cpp  WindowsLib.ixx
LunaSolGameEngine/src/utils/: StdUtils.ixx
(+83 files in other folders)
